--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,29 @@
+:root {
+    --background-color: lightpink;
+    --text-color: black;
+    --border: 1px solid black;
+}
+
+
 nav {
-    background-color: darkblue;
+    background-color: var(--background-color);
     padding: 10px;
 }
 
 nav a {
-    color: white;
+    color: var(--text-color);
     display: block;
     padding: 20px;
 }
 
 h1 {
-    color: darkblue;
+    color: var(--text-color);
 }
 
 main img {
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: var(--border);
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
@@ -32,10 +39,10 @@ main {
 aside {
     width: 300px;
     margin: 10px;
-    border: 1px solid rgb(0 0 0 / 0.1);
+    border: var(--border);
     padding: 10px;
-    background-color: lightpink;
-    color: black;
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 
 aside img {
