--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,11 @@
     --border: 1px solid black;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 nav {
     background-color: var(--background-color);
@@ -20,20 +25,23 @@ h1 {
     color: var(--text-color);
 }
 
+p {
+    padding: 0;
+    margin: 10px;
+}
+
+main {
+    max-width: 840px;
+}
+
 main img {
     width: 150px;
     height: auto;
     border: var(--border);
     padding: 2px;
     box-shadow: 0 0 30px gray;
-}
-
-p {
-    padding: 0;
-}
-
-main {
-    max-width: 840px;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
 aside {
@@ -43,6 +51,8 @@ aside {
     padding: 10px;
     background-color: var(--background-color);
     color: var(--text-color);
+    position: relative;
+    text-align: center;
 }
 
 aside img {
@@ -50,8 +60,26 @@ aside img {
     height: auto;
 }
 
+aside h2 {
+    position: absolute;
+    left: 53px;
+}
+
 footer {
     margin-top: 10px;
     border-top: 2px dotted black;
     text-align: center;
+}
+
+/* Class Selectors */
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, .1);
+    padding: 1rem;
+    background-color: #eee;
+    color: #000;
+}
+
+.indent {
+    padding-left: 2rem;
 }
