--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,9 @@ nav {
 
 nav a {
     color: var(--text-color);
+    display: block;
     padding: 20px;
+    text-decoration: none;
 }
 
 body {
@@ -38,6 +40,7 @@ body {
 
 h1 {
     color: var(--text-color);
+    border-bottom: dotted black;
 }
 
 p {
@@ -48,7 +51,7 @@ p {
 main {
     max-width: 840px;
     margin: 1rem;
-    grid-column: 2;
+    grid-column: 2/3;
 }
 
 main img {
@@ -70,7 +73,7 @@ aside {
     color: var(--text-color);
     position: relative;
     text-align: center;
-    grid-column: 1;
+    grid-column: 1/2;
     grid-row: 1/2;
 }
 
