--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -24,8 +24,52 @@ header, main, footer {
     color: var(--primary-color);
 }
 
-footer img {
-    width: 50px;
+header {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 300px auto;
+    border: solid black;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: var(--accent2-color);
+}
+
+header nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border: solid black;
+    margin: auto;
+    padding: 15px;
+    background-color: white; 
+}
+
+header nav a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+}
+
+header img {
+    justify-self: center;
+    border: solid black;
+}
+
+footer {
+    margin-top: 50px;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+footer p {
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    left: 0;
 }
 
 h1, h2 {
@@ -39,6 +83,60 @@ h1, h2 {
 nav, p, section, article {
     margin: 16px;
     padding: 8px;
+}
+
+figure {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto auto;
+    justify-items: center;
+}
+
+figure img {
+    margin-top: 10px;
+    grid-row: 1/2;
+}
+
+figcaption {
+    justify-self: center;
+    align-self: center;
+}
+
+.history {
+    margin: 5px;
+    display: grid;
+    grid-template-columns: 343px 125px 343px;
+    grid-template-rows: repeat(6, 30px);
+    border: solid black;
+}
+
+.history h2 {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    align-self: center;
+}
+
+.history img {
+    grid-column: 2/3;
+    grid-row: 3/6;
+    align-self: flex-end;
+}
+
+.adventure {
+    border: solid black;
+    margin: 5px;
+}
+
+.socialmedia {
+    position: absolute;
+    right: 0;
+    display: flex;
+    gap: 10px;      
+}
+
+.socialmedia img {
+    width: 40px;
+    height: auto;
 }
 
 .socialmedia a {
