--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -116,7 +116,7 @@ nav, p, section, article {
 
 .adventure h2 {
     grid-column: 1/-1;
-    grid-row: 1;
+    grid-row: 1/2;
 }
 
 .adventure img {
