week 5 activities and code along

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -109,7 +109,7 @@ nav, p, section, article {
     border: solid black;
     margin: 5px;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: auto auto;
     justify-items: center;
 }
