--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -85,6 +85,23 @@ nav, p, section, article {
     padding: 8px;
 }
 
+address {
+    text-align: center;
+    padding: 5px;
+    margin: 5px;
+    font-weight: bold;
+}
+
+iframe {
+    width: 100%;
+    height: 350px;
+}
+
+form {
+    margin-top: 10px;
+    font-weight: 900;
+}
+
 .history {
     margin: 5px;
     display: grid;
@@ -105,7 +122,7 @@ nav, p, section, article {
     align-self: flex-end;
 }
 
-.adventure {
+.adventure, .employees{
     border: solid black;
     margin: 5px;
     display: grid;
@@ -114,7 +131,7 @@ nav, p, section, article {
     justify-items: center;
 }
 
-.adventure h2 {
+.adventure h2, .employees h2 {
     grid-column: 1/-1;
     grid-row: 1/2;
 }
@@ -123,9 +140,10 @@ nav, p, section, article {
     margin-top: 10px;
 }
 
-.adventure figcaption {
+.adventure figcaption, .employees figcaption {
     justify-self: center;
     align-self: center;
+    text-align: center;
 }
 
 .socialmedia {
@@ -180,4 +198,86 @@ nav, p, section, article {
     border: 2px solid black;
     margin: 10px;
     box-shadow: 0 0 30px gray;
+}
+
+.employees {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.employees img {
+    display: grid;
+    margin-top: 10px;
+    width: 150px;
+    justify-self: center;
+    align-self: center;
+}
+
+.employees figcaption {
+    font-size: .8rem;
+}
+
+.contact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.form-item {
+    display: grid;
+    align-items: center;
+}
+
+.column2 {
+    grid-template-columns: 1fr 3fr;
+    margin: 5px;
+}
+
+.radio-group {
+    margin: 10px 0;
+    border: none;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: start;
+    gap: 10px
+}
+
+.radio-group h3 {
+    grid-column: 1;
+    margin: 0;
+    font-size: 1rem;
+    align-self: center;
+}
+
+.options {
+    display: grid;
+    grid-column: 2;
+    gap: 5px;
+}
+
+.options label {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    padding: 5px;
+    gap: 5px;
+}
+
+.message {
+    margin: 15px 0;
+    display: grid;
+}
+
+.checkbox label {
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+button {
+    margin: 15px 0;
+    width: 100%;
+    height: 40px;
+    font-size: 1.3rem;
 }
