--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -5,6 +5,7 @@
     --accent2-color: #fffea7;
     --heading-font: Verdana, Arial sans-serif;
     --body-font: 'Trebuchet MS', Tahoma, sans-serif;
+    --border: 2px solid black;
 }
 
 * {
@@ -28,7 +29,7 @@ header {
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: 300px auto;
-    border: solid black;
+    border: var(--border);
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -39,7 +40,7 @@ header nav {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    border: solid black;
+    border: var(--border);
     margin: auto;
     padding: 15px;
     background-color: white; 
@@ -53,7 +54,7 @@ header nav a {
 
 header img {
     justify-self: center;
-    border: solid black;
+    border: var(--border);
 }
 
 footer {
@@ -92,6 +93,11 @@ address {
     font-weight: bold;
 }
 
+.address h1 {
+    background-color: #12521b;
+    color: #fff;
+}
+
 iframe {
     width: 100%;
     height: 350px;
@@ -103,11 +109,11 @@ form {
 }
 
 .history {
-    margin: 5px;
+    margin: 5px 0;
     display: grid;
     grid-template-columns: 343px 125px 343px;
     grid-template-rows: repeat(6, 30px);
-    border: solid black;
+    border: var(--border);
 }
 
 .history h2 {
@@ -123,8 +129,8 @@ form {
 }
 
 .adventure, .employees{
-    border: solid black;
-    margin: 5px;
+    border: var(--border);
+    margin: 5px 0;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: auto auto;
@@ -144,6 +150,7 @@ form {
     justify-self: center;
     align-self: center;
     text-align: center;
+    padding: 5px;
 }
 
 .socialmedia {
@@ -180,7 +187,7 @@ form {
     text-align: center;
     opacity: 0.7;
     background-color: var(--accent1-color);
-    color: #fff; /* white text - check contrast with background */
+    color: #fff;
 }
 
 .hero article {
@@ -195,7 +202,7 @@ form {
 .hero article img {
     float: right;
     width: 125px;
-    border: 2px solid black;
+    border: var(--border);
     margin: 10px;
     box-shadow: 0 0 30px gray;
 }
@@ -280,4 +287,139 @@ button {
     width: 100%;
     height: 40px;
     font-size: 1.3rem;
+}
+
+.home {
+    display: grid;
+    border: var(--border);
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin: 10px 0;
+}
+
+.home h2 {
+    grid-column: 1/-1;
+    text-align: center; 
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.home figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.home figcaption {
+    margin-bottom: 10px;
+    font-size: 1.3rem; 
+}
+
+.home img {
+    max-width: 300px;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    border: var(--border);
+}
+
+.home-grid form {
+    display: grid;
+    grid-template-columns: 1fr; 
+}
+
+.home-grid form input {
+    width: 350px;
+    justify-self: center;
+    margin: 3px;
+    padding: 3px
+}
+
+.home-grid form label {
+    margin: 5px;
+}
+
+.home-grid form button {
+    display: block;
+    margin: 20px auto;
+    font-size: 1rem;
+    font-weight: bold;
+    width: auto;
+    padding: 10px;
+}
+
+.home-grid h3 {
+    font-size: 1.8rem;
+    padding-top: 20px;
+    text-align: center;
+    border-right: var(--border)
+}
+
+.trips {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    border: var(--border);
+    margin: 10px 0;
+}
+
+.trips h2 {
+    font-size: 1.8rem;
+    text-align: center;
+    border-right: var(--border);
+    grid-column: 1/-1;
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.trips img {
+    width: 180px;
+    margin-top: 10px;
+}
+
+.trips figcaption {
+    font-size: 1.5rem;
+    margin-top: 10px;
+}
+
+.table {
+    border: var(--border);
+    border-collapse: collapse;
+    letter-spacing: 1px;
+    text-align: center;
+    padding: 5px;
+}
+
+.table h1 {
+    font-size: 1.5rem;
+    margin: 2px;
+    width: fit-content;
+    margin: 0 auto;
+}
+
+th {
+    font-size: 1rem;
+    background-color: lightgray;
+}
+
+th, td {
+    border: var(--border);
+    padding: 2px 8px;
+    height: 45px;
+}
+
+thead th{
+    font-size: 1.3rem;
+    background-color: var(--accent2-color);
+}
+
+.line {
+    border: var(--border);
+    margin: 10px 0;
+    text-align: center;
+    background-color: var(--accent2-color);
 }
