--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,7 +3,7 @@
     --secondary-color: #0c40a0;
     --accent1-color: #12521b;
     --accent2-color: #fffea7;
-    --heading-font: Verdana, Arial sans-serif;
+    --heading-font: Verdana, Arial, sans-serif;
     --body-font: 'Trebuchet MS', Tahoma, sans-serif;
     --border: 2px solid black;
 }
